# HNPI_STU_AL

./: .gitignore  CMakeLists.txt  HNPI_STU_AL.sln  HNPI_STU_AL.vcxproj  HNPI_STU_AL.vcxproj.filters  README.md  auth.hpp  cli.hpp  def.h  logger.hpp  main.cpp  service_manager.hpp  utils.hpp
lib/: hv_static.lib
lib/Release/: hv_static.lib
